@@ -22,6 +22,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 
 * (bug 18222) $wgMinimalPasswordLength default is now 1
 * $wgSessionHandler can be used to configure session.save_handler
+* $wgLocalFileRepo/$wgForeignFileRepos now have a 'fileMode' parameter to
+  be used when uploading/moving files
 
 === New features in 1.16 ===
 
@@ -113,7 +115,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 6802) profileinfo.php now also work on other database servers than MySQL
 * (bug 16925) Diffs no longer fail when $wgExternalDiffEngine is set to 'wikidiff'
   or 'wikidiff2' but extension is not installed
-
+* (bug 18326) Chmod errors in file repos have been hidden
 
 == API changes in 1.16 ==
 
